--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,27 @@
 cmake_minimum_required(VERSION 3.16)
 project(Donutopia VERSION 1.0)
 
-# abilita il supporto per i test, tra cui l'opzione BUILD_TESTING usata sotto
+# enable test support
 include(CTest)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# richiedi l'uso di C++17, senza estensioni non-standard offerte dal compilatore usato 
+# require C++ 17 without compiler extensions
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 
-# abilita warning
+# enable warnings
 string(APPEND CMAKE_CXX_FLAGS " -Wall -Wextra")
 
-# abilita l'address sanitizer e l'undefined-behaviour sanitizer in debug mode
+# enable in debug mode the address sanitizer and undefined-behaviour
 string(APPEND CMAKE_CXX_FLAGS_DEBUG " -fsanitize=address,undefined -fno-omit-frame-pointer")
 string(APPEND CMAKE_EXE_LINKER_FLAGS_DEBUG " -fsanitize=address,undefined -fno-omit-frame-pointer")
 
-# add_executable(donutopia source/main.cpp source/matrix.cpp source/point.cpp source/camera.cpp source/solid.cpp source/render.cpp source/rgb.cpp)
-add_library(donutopia STATIC source/matrix.cpp source/point.cpp source/camera.cpp source/solid.cpp source/render.cpp source/rgb.cpp source/shape.cpp)
+# compile the library
+add_library(donutopia STATIC source/matrix.cpp source/point.cpp source/rgb.cpp source/camera.cpp source/shape.cpp source/solid.cpp source/render.cpp)
 
-# se il testing e' abilitato...
-#   per disabilitare il testing, passare -DBUILD_TESTING=OFF a cmake durante la fase di configurazione
+# build tests only if BUILD_TESTING is True
 if (BUILD_TESTING)
 
   # aggiungi l'eseguibile matrix.test.t
